--- a/Views/PostView.xaml
+++ b/Views/PostView.xaml
@@ -3,26 +3,55 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MVVM_API_SampleProject.Views.PostView"
              Title="PostView">
-    <VerticalStackLayout>
-        <Label 
-            Text="{Binding Post.UserId}"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <ScrollView>
+        <VerticalStackLayout>
+            <Entry Placeholder="Id Post" Text="{Binding POst.Id}"/>
+            <Entry Placeholder="Usuário" Text ="{Binding Post.UserId}"/>
+            <Entry Placeholder="Título do Post" Text="{Binding Post.Title}"/>
+            <Entry Placeholder="Id Post" Text="{Binding Post.Body}"/>
 
-        <Label 
-            Text="{Binding  Post.Id}"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            <HorizontalStackLayout>
+                <Button Text="Carregar Posts" Command="{Binding GetPostsCommad}"/>
+            </HorizontalStackLayout>
 
-        <Label 
-            Text="{Binding  Post.Title}"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            <CollectionView x:Name="PostsCollection" ItemsSource="{Binding Posts}" EmptyView="Nenhum post encontrado">
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout Orientation="Vertical"/>
+                </CollectionView.ItemsLayout>
+                  <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <VerticalStackLayout>
+                               <Frame>
 
-        <Label 
-            Text="{Binding  Post.Body}"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+                                   <VerticalStackLayout Margin="50" HorizontalOptions="Center" MaximumHeightRequest="180">
+
         
-    </VerticalStackLayout>
+                                        <Label 
+                                          Text="{Binding Post.UserId}"
+                                          VerticalOptions="Center" 
+                                          HorizontalOptions="Center" />
+        
+                                        <Label 
+                                          Text="{Binding  Post.Id}"
+                                          VerticalOptions="Center" 
+                                          HorizontalOptions="Center" />
+        
+                                        <Label 
+                                          Text="{Binding  Post.Title}"
+                                          VerticalOptions="Center" 
+                                          HorizontalOptions="Center" />
+        
+                                        <Label 
+                                          Text="{Binding  Post.Body}"
+                                          VerticalOptions="Center" 
+                                          HorizontalOptions="Center" />
+        
+                                   </VerticalStackLayout>
+                               </Frame>
+                            </VerticalStackLayout>
+                        </DataTemplate>
+                  </CollectionView.ItemTemplate>
+            </CollectionView>
+        </VerticalStackLayout>
+    </ScrollView>   
 </ContentPage>
